<resources>
    <string name="app_name">RedCrossAction</string>
    <string name="Severity_description">Severity of the event</string>
    <string name="low_severity">Low</string>
    <string name="medium">Medium</string>
    <string name="critical">Critical</string>
    <string name="major">Major</string>
    <string name="first_aid">First Aid</string>
    <string name="psychologist">Psychologist</string>
    <string name="general_support">General Support</string>
    <string name="required_skills">Skills required to the event</string>
    <string name="hint_text">anything extra we should know about</string>
    <string name="report_event">Report Event</string>
    <string name="fire">Fire</string>
    <string name="Flood">flood</string>
    <string name="info_is_checked">Info is Checked</string>
    <string name="update_status">Update Status</string>
</resources>
